--- a/03-composer-phpunit/composer.json
+++ b/03-composer-phpunit/composer.json
@@ -12,6 +12,11 @@
       "App\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^11.2"
   }
